AC_PREREQ(2.65)
AC_INIT([dovecot-openchange], [1.0], [openchange@openchange.org])

AM_INIT_AUTOMAKE([1.10 silent-rules])

AM_MAINTAINER_MODE
PKG_PROG_PKG_CONFIG

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([.])
AC_CONFIG_FILES([Makefile])

AC_PROG_CC_STDC
LT_INIT

DC_DOVECOT([2.0])

PKG_CHECK_MODULES(MAPISTORE, libmapistore >= 2.2)
AC_SUBST(MAPISTORE_CFLAGS)
AC_SUBST(MAPISTORE_LIBS)

PKG_CHECK_MODULES(NANOMSG, libnanomsg, [], [AC_MSG_ERROR(Install nanomsg library >= 0.5)])
AC_SUBST(NANOMSG_CFLAGS)
AC_SUBST(NANOMSG_LIBS)

AC_OUTPUT
